tests/test_assets/scope_test.cog
// ============================================================
// SCOPE TESTS
// ============================================================

// shadowing local over global
x : i32 = 1;
{
    x : i32 = 2;
    x = 3;
}
x = 4;

// nested shadowing
a : i32 = 1;
{
    a : i32 = 2;
    {
        a : i32 = 3;
        a = 4;
    }
    a = 5;
}
a = 6;

// outer variable visible in inner scope
outer : i32 = 10;
{
    outer = outer + 1;
}

// local variable disappears after scope
{
    scoped : i32 = 42;
}

// variable declared inside if
flag2 : bool = true;
if flag2 {
    inside_if : i32 = 5;
}

// variable declared inside while
counter := 3;
while counter > 0 {
    temp := counter;
    counter--;
}

// variable declared inside for
i := 0;
for i < 5 : i++ {
    local_sum := i;
}

// nested blocks
{
    x1 := 1;
    {
        x2 := 2;
        {
            x3 := 3;
        }
    }
}

// ============================================================
// FUNCTION SCOPES
// ============================================================

scope_test :: () {
    local := 5;
    {
        inner := 10;
        local = inner;
    }

    local = 20;
}

params :: (a: i32, b: i32) {
    sum := a + b;
}

// parameter shadowed by local
shadow_param :: (x: i32) {
    {
        x : i32 = 10;
        x++;
    }
}

// ============================================================
// STRUCT SCOPES
// ============================================================

Rect :: struct {
    width : f32;
    height : f32;
}

rect : Rect;
rect.width = 10.0;
rect.height = 20.0;

// ============================================================
// POINTER SCOPES
// ============================================================

ptr : i32* = 0;
{
    local_ptr : i32* = 0;
}

// ============================================================
// ARRAY SCOPES
// ============================================================

numbers : i32[5];
{
    numbers[0] = 1;
}

// ============================================================
// DEEP NESTING
// ============================================================

{
    a1 := 1;
    {
        a2 := a1;
        {
            a3 := a2;
            {
                a4 := a3;
                {
                    a5 := a4;
                }
            }
        }
    }
}

boolean : bool = false;

Point :: struct {
    x : i32; // TODO: Add init on create?
    y : i32;
}

p := Point {
    x = 5,
    y = 10,
};

y := "string";
{
    c : u8 = 'a';
}

PI :: 3.14159;
PII: f64 : 3.14159;
TAU :: PI * 2;
PI = 4;
BAD :: some_func();
BAD :: 1 / 0;

gf: f64 = PI;
xf: i64 = gf;

10 % 3;          // valid
10 % 3.0;        // error: '%' requires integer operands

a: i32 = 10;
b: i32 = 3;
a % b;           // valid

x: i32 = 10;
y: i64 = 3;
x % y;           // error: different concrete numeric types

z: i64 = 10;
z % 3;           // valid: untyped literal 3 adapts to i64

// Passes:
x: i64 = 10;
x == 10;
x != 20;
x < 30;
x >= 5;


// Passes:
xp: i64 = 10;
xp == 10;
xp != 20;
xp < 30;
xp >= 5;

// Fails:
aaa: i32 = 1;
bbb: i64 = 2;
aaa == bbb;
aaa < bbb;
true < false;
"hello" > "world";

// Plain void variable — semantic error
x1: void;

// Pointer to void — semantic error
x2: void*;

// Array of void — semantic error
x3: void[4];

// Constant explicitly typed void — semantic error
x4: void: 10;

// Void parameter — semantic error
foo1::(x: void) {
}

// Pointer-to-void parameter — semantic error
foo2::(x: void*) {
}

// Plain void return — valid
foo3::() -> void {
    return;
}

// Pointer-to-void return — semantic error
foo4::() -> void* {
}

// Void struct field — semantic error
BadStruct::struct {
    field: void;
}

// Pointer-to-void struct field — semantic error
BadStruct2::struct {
    field: void*;
}